# incident-triage-env

./: .dockerignore  .gitignore  CHANGELOG_AND_RUNBOOK.md  Dockerfile  README.md  Readme.md  app.py  client.py  environment.py  graders.py  incidents.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
server/: Dockerfile  Incident_Triage_environment.py  __init__.py  app.py  environment.py  graders.py
tests/: heuristic_selftest.py  test_env.py  test_graders.py  test_inference.py
ui/: api.html  index.html  playground.html  status.html
ui/assets/: app.js  styles.css
