[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "incident-triage-env"
version = "0.1.0"
description = "FastAPI incident triage environment for production alert classification."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai",
    "requests",
    "python-dotenv",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[tool.setuptools]
py-modules = [
    "app",
    "client",
    "environment",
    "graders",
    "incidents",
    "inference",
    "models",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["server*"]
